--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #24272E;
+    background-color: #292C34;
 }
 
 header {
@@ -31,7 +31,69 @@ header > h1 {
     font-size: 46px;
     padding: 15px 20px;
     font-family: Asap, sans-serif;
+    position: relative;
 }
 
+.badge  {
+    background: #E2584D;
+    color: white;
+    font-size: 14px;
+    padding: 2px 10px;
+    font-family: Asap, sans-serif;
+}
+
+#user-label {
+    position: absolute;
+    top: 30px;
+    left: -25px;
+}
+
+#computer-label {
+    position: absolute;
+    top: 30px;
+    right: -25px;
+}
+
+.result {
+    font-size: 40px;
+    color:  white;
+}
+
+.result > p {
+    text-align: center;
+    font-weight: bold;
+    font-family: Asap, sans-serif;
+}
+
+
+.choices {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.choice {
+    display: inline-block;
+    border: 4px solid #E2584D;
+    border-radius: 50%;
+    padding: 10px;
+    margin: 0 20px;
+    background-color: white;
+    transition: all 0.3s ease;
+}
+
+.choice:hover {
+    cursor: pointer;
+    background: #663b60;
+}
+
+
+#action-message {
+    text-align: center;
+    color: white;
+    font-family: Asap, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 20px;
+}
 
 
