--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ header {
     padding: 20px;
 }
 
-header > h1 {
+header>h1 {
     color: #24272E;
     text-align: center;
     font-family: Asap, sans-serif;
@@ -34,7 +34,7 @@ header > h1 {
     position: relative;
 }
 
-.badge  {
+.badge {
     background: #E2584D;
     color: white;
     font-size: 14px;
@@ -55,10 +55,10 @@ header > h1 {
 
 .result {
     font-size: 40px;
-    color:  white;
+    color: white;
 }
 
-.result > p {
+.result>p {
     text-align: center;
     font-weight: bold;
 }
@@ -91,6 +91,5 @@ header > h1 {
     font-weight: bold;
     font-size: 20px;
     margin-top: 20px;
+    text-transform: capitalize;
 }
-
-
