Added 'Rules of the Game' section to the top of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,12 +53,12 @@ header>h1 {
     right: -25px;
 }
 
-.result {
+.rules {
     font-size: 40px;
     color: white;
 }
 
-.result>p {
+.rules>p {
     text-align: center;
     font-weight: bold;
 }
