--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asap:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&display=swap");
 
 * {
     margin: 0;
@@ -17,23 +17,22 @@ header {
 }
 
 header>h1 {
-    color: #24272E;
+    color: white;
     text-align: center;
     font-family: Asap, sans-serif;
 }
 
-
 .container {
     position: absolute;
-    top: 44%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 800px;
-    height: 600px;
+    width: 1000px;
+    height: 500px;
 }
 
 .score-board {
@@ -41,8 +40,8 @@ header>h1 {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 50%;
     border-radius: 8px;
     border: 8px solid white;
 }
@@ -78,7 +77,6 @@ header>h1 {
     align-items: center;
 }
 
-
 /**
 #user-label {
     position: absolute;
@@ -102,8 +100,18 @@ header>h1 {
 .rules>p {
     text-align: center;
     font-weight: bold;
+    text-decoration: underline;
 }
 
+.highlight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.highlight>span {
+    padding: 7px
+}
 
 .choices {
     text-align: center;
@@ -125,7 +133,6 @@ header>h1 {
     background: #909220;
 }
 
-
 #action-message {
     text-align: center;
     color: white;
@@ -133,4 +140,11 @@ header>h1 {
     font-size: 20px;
     margin-top: 20px;
     text-transform: capitalize;
+}
+
+#user-score,
+#computer-score {
+    font-size: 50px;
+    color: white;
+    font-weight: bold;
 }
