--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ header>h1 {
     }
 
     #user-score,
-    #conputer-score {
+    #computer-score {
         font-size: 40px;
     }
 }
@@ -194,7 +194,15 @@ header>h1 {
 @media screen and (max-width: 440px) {
     .container {
         width: 100%;
-        height: 50%;
-        top: 50%;
+        height: 40%;
+        top: 65%;
+    }
+}
+
+@media screen and (max-width: 292px) {
+    .container {
+        width: 100%;
+        height: 40%;
+        top: 80%;
     }
 }
