--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,8 +158,8 @@ header>h1 {
 
     .container {
         width: 90%;
-        height: 50%;
-        top: 50%;
+        height: 40%;
+        top: 65%;
     }
 
     .score-board {
@@ -192,17 +192,43 @@ header>h1 {
 }
 
 @media screen and (max-width: 440px) {
+    .choices {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .choices>.choice {
+        height: 100px;
+        width: 100px;
+    }
+
+    .choice>img {
+        height: 80px;
+        width: 80px;
+    }
+
     .container {
         width: 100%;
         height: 40%;
         top: 65%;
     }
+
 }
 
 @media screen and (max-width: 292px) {
     .container {
         width: 100%;
         height: 40%;
-        top: 80%;
+        top: 55%;
+    }
+
+    .choices>.choice {
+        height: 70px;
+        width: 70px;
+    }
+
+    .choice>img {
+        height: 50px;
+        width: 50px;
     }
 }
