--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,10 @@ header>h1 {
 }
 
 @media screen and (max-width: 440px) {
+    .rules {
+        margin-top: 1rem;
+    }
+
     .choices {
         text-align: center;
         margin-top: 20px;
@@ -210,7 +214,13 @@ header>h1 {
     .container {
         width: 100%;
         height: 40%;
-        top: 65%;
+        top: 68%;
+    }
+
+    .badge {
+        font-size: 10px;
+        padding: 10px 15px;
+        margin-bottom: 1px;
     }
 
 }
